<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">


    <PreferenceCategory app:title="@string/profile_header">

        <EditTextPreference
            app:icon="@drawable/ic_outline_account_circle_24"
            app:key="signature"
            app:title="@string/name_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>
    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/title_account">

        <Preference
            app:icon="@drawable/ic_outline_report_problem_24"
            app:key="Delete"
            app:title="@string/account_delete" />

        <Preference
            app:icon="@drawable/ic_outline_report_problem_24"
            app:key="Logout"
            app:title="@string/log_out" />

    </PreferenceCategory>
</PreferenceScreen>