<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/settings"
        android:contentDescription="@string/content_description_settings"
        android:icon="@drawable/ic_settings_24"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/favorite"
        android:contentDescription="@string/content_description_favorite"
        android:icon="@drawable/ic_favorite_border_24"
        android:title="@string/favorite"
        app:showAsAction="ifRoom" />


    <!--    <item-->
    <!--        android:id="@+id/search"-->
    <!--        android:icon="@drawable/ic_search_24"-->
    <!--        android:title="@string/search"-->
    <!--        android:contentDescription="@string/content_description_search"-->
    <!--        app:showAsAction="ifRoom" />-->

    <!--    <item-->
    <!--        android:id="@+id/more"-->
    <!--        android:title="@string/more"-->
    <!--        android:contentDescription="@string/content_description_more"-->
    <!--        app:showAsAction="never" />-->

</menu>