<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_friend_list"
        android:icon="@drawable/ic_outline_supervised_user_circle_24"
        android:title="@string/title_friends_list" />

    <item
        android:id="@+id/navigation_find_friend"
        android:icon="@drawable/ic_outline_person_search_24"
        android:title="@string/title_find_friend" />

    <item
        android:id="@+id/navigation_places"
        android:icon="@drawable/ic_outline_pin_drop_24"
        android:title="@string/title_places" />

<!--    <item-->
<!--        android:id="@+id/navigation_account"-->
<!--        android:icon="@drawable/ic_outline_account_circle_24"-->
<!--        android:title="@string/title_account" />-->
</menu>